@@ -17,6 +17,7 @@ S3method(formula,brmsfit)
 S3method(hypothesis,brmsfit)
 S3method(launch_shiny,brmsfit)
 S3method(logLik,brmsfit)
+S3method(log_lik,brmsfit)
 S3method(loo,brmsfit)
 S3method(marginal_effects,brmsfit)
 S3method(model.frame,brmsfit)
@@ -27,9 +28,11 @@ S3method(parnames,brmsfit)
 S3method(plot,brmsMarginalEffects)
 S3method(plot,brmsfit)
 S3method(plot,brmshypothesis)
+S3method(posterior_predict,brmsfit)
 S3method(posterior_samples,brmsfit)
 S3method(pp_check,brmsfit)
 S3method(predict,brmsfit)
+S3method(predictive_error,brmsfit)
 S3method(print,brmsMarginalEffects)
 S3method(print,brmsVarCorr)
 S3method(print,brmsfamily)
@@ -46,7 +49,7 @@ S3method(print,cov_fixed)
 S3method(print,ic)
 S3method(print,iclist)
 S3method(prior_samples,brmsfit)
-S3method(priors,brmsfit)
+S3method(prior_summary,brmsfit)
 S3method(ranef,brmsfit)
 S3method(residuals,brmsfit)
 S3method(stancode,brmsfit)
@@ -93,6 +96,7 @@ export(hurdle_negbinomial)
 export(hurdle_poisson)
 export(hypothesis)
 export(launch_shiny)
+export(log_lik)
 export(lognormal)
 export(loo)
 export(make_stancode)
@@ -102,12 +106,14 @@ export(negbinomial)
 export(ngrps)
 export(parnames)
 export(posterior.samples)
+export(posterior_predict)
 export(posterior_samples)
 export(pp_check)
+export(predictive_error)
 export(prior)
 export(prior_samples)
 export(prior_string)
-export(priors)
+export(prior_summary)
 export(ranef)
 export(set_prior)
 export(sratio)
@@ -137,6 +143,10 @@ importFrom(lme4,ngrps)
 importFrom(lme4,ranef)
 importFrom(loo,loo)
 importFrom(loo,waic)
+importFrom(rstantools,log_lik)
+importFrom(rstantools,posterior_predict)
+importFrom(rstantools,predictive_error)
+importFrom(rstantools,prior_summary)
 importFrom(statmod,dinvgauss)
 importFrom(statmod,pinvgauss)
 importFrom(statmod,qinvgauss)
