@@ -1,10 +1,12 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/brmsfit-methods.R
-\name{logLik.brmsfit}
+\name{log_lik.brmsfit}
 \alias{logLik.brmsfit}
-\title{Compute the pointwise log-likelihood}
+\alias{log_lik}
+\alias{log_lik.brmsfit}
+\title{Compute the Pointwise Log-Likelihood}
 \usage{
-\method{logLik}{brmsfit}(object, newdata = NULL, re_formula = NULL,
+\method{log_lik}{brmsfit}(object, newdata = NULL, re_formula = NULL,
   allow_new_levels = FALSE, subset = NULL, nsamples = NULL,
   pointwise = FALSE, ...)
 }
@@ -37,7 +39,7 @@ log-likelihood matrix at once (the default), or just return
 the likelihood function along with all data and samples
 required to compute the log-likelihood separately for each
 observation. The latter option is rarely useful when
-calling \code{logLik} directly, but rather when computing
+calling \code{log_lik} directly, but rather when computing
 \code{\link[brms:WAIC]{WAIC}} or \code{\link[brms:LOO]{LOO}}.}
 
 \item{...}{Currently ignored}
@@ -52,6 +54,6 @@ Usually, an S x N matrix containing
  data and posterior samples.
 }
 \description{
-Compute the pointwise log-likelihood
+Compute the Pointwise Log-Likelihood
 }
 
