@@ -1,6 +1,8 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/brmsfit-methods.R
 \name{predict.brmsfit}
+\alias{posterior_predict}
+\alias{posterior_predict.brmsfit}
 \alias{predict.brmsfit}
 \title{Model Predictions of \code{brmsfit} Objects}
 \usage{
@@ -8,6 +10,11 @@
   transform = NULL, allow_new_levels = FALSE, incl_autocor = TRUE,
   subset = NULL, nsamples = NULL, sort = FALSE, ntrys = 5,
   summary = TRUE, robust = FALSE, probs = c(0.025, 0.975), ...)
+
+\method{posterior_predict}{brmsfit}(object, newdata = NULL,
+  re_formula = NULL, transform = NULL, allow_new_levels = FALSE,
+  incl_autocor = TRUE, subset = NULL, nsamples = NULL, sort = FALSE,
+  ntrys = 5, robust = FALSE, probs = c(0.025, 0.975), ...)
 }
 \arguments{
 \item{object}{An object of class \code{brmsfit}}
@@ -91,6 +98,9 @@ The estimated means of both methods should, however, be very similar.
   are interpreted as if all dummy variables of this factor are 
   zero. This allows, for instance, to make predictions of the grand mean 
   when using sum coding.  
+  
+  Method \code{posterior_predict.brmsfit} is an alias of 
+  \code{predict.brmsfit} with \code{summary = FALSE}. 
 
   For truncated discrete models only:
   In the absence of any general algorithm to sample 
