@@ -1,16 +1,14 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/brmsfit-methods.R, R/generics.R
-\name{priors.brmsfit}
-\alias{priors}
-\alias{priors.brmsfit}
-\title{Extract priors of a Bayesian model}
+% Please edit documentation in R/brmsfit-methods.R
+\name{prior_summary.brmsfit}
+\alias{prior_summary}
+\alias{prior_summary.brmsfit}
+\title{Extract Priors of a Bayesian Model Fitted with \pkg{brms}}
 \usage{
-\method{priors}{brmsfit}(x, all = TRUE, ...)
-
-priors(x, ...)
+\method{prior_summary}{brmsfit}(object, all = TRUE, ...)
 }
 \arguments{
-\item{x}{An \R object}
+\item{object}{A \code{brmsfit} object}
 
 \item{all}{Logical; Show all parameters in the model which may have 
 priors (\code{TRUE}) or only those with proper priors (\code{FALSE})?}
@@ -21,7 +19,7 @@ priors (\code{TRUE}) or only those with proper priors (\code{FALSE})?}
 For \code{brmsfit} objects, an object of class \code{brmsprior}.
 }
 \description{
-Extract priors of a Bayesian model
+Extract Priors of a Bayesian Model Fitted with \pkg{brms}
 }
 \examples{
 \dontrun{
@@ -31,9 +29,9 @@ fit <- brm(count ~ log_Age_c + log_Base4_c * Trt_c
            prior = c(prior(student_t(5,0,10), class = b),
                      prior(cauchy(0,2), class = sd)))
                    
-priors(fit)
-priors(fit, all = FALSE)
-print(priors(fit, all = FALSE), show_df = FALSE)
+prior_summary(fit)
+prior_summary(fit, all = FALSE)
+print(prior_summary(fit, all = FALSE), show_df = FALSE)
 }
 
 }
