@@ -1,6 +1,8 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/brmsfit-methods.R
 \name{residuals.brmsfit}
+\alias{predictive_error}
+\alias{predictive_error.brmsfit}
 \alias{residuals.brmsfit}
 \title{Extract Model Residuals from brmsfit Objects}
 \usage{
@@ -9,6 +11,12 @@
   allow_new_levels = FALSE, incl_autocor = TRUE, subset = NULL,
   nsamples = NULL, sort = FALSE, summary = TRUE, robust = FALSE,
   probs = c(0.025, 0.975), ...)
+
+\method{predictive_error}{brmsfit}(object, newdata = NULL,
+  re_formula = NULL, type = c("ordinary", "pearson"),
+  allow_new_levels = FALSE, incl_autocor = TRUE, subset = NULL,
+  nsamples = NULL, sort = FALSE, robust = FALSE, probs = c(0.025,
+  0.975), ...)
 }
 \arguments{
 \item{object}{An object of class \code{brmsfit}}
@@ -87,10 +95,14 @@ Residuals of type \code{ordinary}
  Residuals of type \code{pearson} are 
  of the form \eqn{R = (Y - Yp) / SD(Y)},
  where \eqn{SD(Y)} is an estimation of the standard deviation 
- of \eqn{Y}. \cr
+ of \eqn{Y}. 
   
  Currently, \code{residuals.brmsfit} does not support 
- \code{categorical} or ordinal models.
+ \code{categorical} or ordinal models. 
+ 
+ Method \code{predictive_error.brmsfit} is an alias of 
+ \code{residuals.brmsfit} with \code{method = "predict"} and
+ \code{summary = FALSE}.
 }
 \examples{
 \dontrun{
